fixed spacing

--- a/frontend/src/components/SingleSpotPage/SingleSpotPage.css
+++ b/frontend/src/components/SingleSpotPage/SingleSpotPage.css
@@ -12,6 +12,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    padding-left: 70px;
 }
 
 .single-spot-title {
@@ -227,6 +228,5 @@
 }
 
 /* #reviews {
-    width: 1030px;
-    padding: 0px 404px;
+    padding-left: 5px;
 } */
